Bug 178020 - Menubar doesn't reappear after exiting fullscreen mode
Summary: Menubar doesn't reappear after exiting fullscreen mode
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-12-18 00:11 UTC by Michal Ziabkowski
Modified: 2008-12-18 23:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Ziabkowski 2008-12-18 00:11:33 UTC
Version:            (using Devel)
Compiler:          gcc version 4.1.2 (Gentoo 4.1.2 p1.1) 
OS:                Linux
Installed from:    Compiled sources

Once I exit Okular's fullscreen mode, the menubar (which had been there before) is gone and needs to be restored by pressing Ctrl+M. That's using KDE 4.1.85. If the bug was there in previous snapshots, I must've not noticed it.
Comment 1 Michal Ziabkowski 2008-12-18 01:21:29 UTC
One observation: the bug stops occuring after Ctrl+M is pressed.  It seems as if a bool is set to false until the menubar state changes.
Comment 2 Albert Astals Cid 2008-12-18 23:08:41 UTC
SVN commit 898742 by aacid:

Update m_showMenuBarAction on the proper time

BUG: 178020


 M  +7 -1      shell.cpp  
 M  +2 -0      shell.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=898742