Update m_showMenuBarAction on the proper time

BUG: 178020

svn path=/trunk/KDE/kdegraphics/okular/; revision=898742